--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "babel-plugin-antd": "0.3.x",
     "es3ify-loader": "^0.1.0",
     "react": "0.14.x",
-    "react-dom": "0.14.x"
+    "react-dom": "0.14.x",
+    "react-router": "^2.4.0"
   },
   "devDependencies": {
     "dora": "0.3.x",
